--- a/main.yml
+++ b/main.yml
@@ -15,4 +15,4 @@ jobs:
           user_name: Mosaddek Hossen
           # Text on contribution graph
           text: Mosaddek Hossen
-      - uses: jasineri/simple-push-action@v1
+      - uses: MosaddekHossen
