--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: jasineri/gitartwork@v1
         with:
           # Use this username's contribution graph
-          user_name: heynazmul
+          user_name: MD
           # Text on contribution graph
-          text: NAZMUL
+          text: Mosaddek Hossen
       - uses: jasineri/simple-push-action@v1
