--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: jasineri/gitartwork@v1
         with:
           # Use this username's contribution graph
-          user_name: Mosaddek Hossen
+          user_name: Mosaddek 
           # Text on contribution graph
-          text: Mosaddek Hossen
+          text: Mosaddek
       - uses: jasineri/simple-push-action@v1
